--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </table>
     </div>
 
-
+    <script language="JavaScript" src="code.js" type="text/javascript"></script>
 </body>
 
 </html>
