Calculadora con icono

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="calculator">
         <h1></h1>
+        <img src="assets/logo.png"  class="center" width="300" height="100">
         <p id="last_operation_history"></p>
         <p id="box" class="box">0</p>
         <table id="table">
